fix footer overlapping content

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
-/* ⬇ General Styles
----------------------------------------- */
+html {
+  height: 100%;
+}
 div.ie-notice {
   position: absolute;
   z-index: 100;
@@ -16,6 +17,10 @@ body {
   height: 100% !important;
   font-size: 10pt;
   font-family: 'Shanti'; }
+div#container {
+  min-height: 100%;
+  position: relative;
+}
 header {
   position: relative;
   z-index: 2;
@@ -107,8 +112,10 @@ header nav a {
   font-size: 8pt;
   text-decoration: none; }
 footer {
-  position: relative;
-  margin-top: 128px;
+  z-index: 10;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 108px;
   background: #494949; }
 footer .copyright {
@@ -214,7 +221,7 @@ div.scenery {
   background-repeat: no-repeat; }
 section.content {
   position: relative;
-  padding-top: 30px;
+  padding: 30px 0 108px 0;
   z-index: 1;
   background-color: #e9f1f5; }
 section.about-us {
